<resources>
    <string name="app_name">Login UI</string>
    <string name="username">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="don_t_have_account">Chưa có tài khoản?</string>
    <string name="create_a_new_account">Tạo tài khoản mới</string>
    <string name="mobile_application_development">Rau củ xanh</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="vegetables_frame_wooden_background">Wooden background with vegetables</string>
</resources>